--- a/app/views/quotes/a_quote.html.erb
+++ b/app/views/quotes/a_quote.html.erb
@@ -1,8 +1,4 @@
-<p>
-  There is nothing either good or bad but
-    <%= noun %> makes it so.
-</p>
-
-<p>
-   Ruby version <%= RUBY_VERSION %>
-</p>
+<p>There is nothing either good or bad but <%= noun %> makes it so.</p>
+<p>I don't like to <%= @verb %></p>
+<p>Ruby version <%= RUBY_VERSION %></p>
+<p><%= ENV.inspect %></p>
